--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,14 +1,19 @@
 <main>
-  <form action="/auth/signup" method="POST">
-    <label for="new-email">Email</label>
-    <input id="new-email" type="email" name="email">
-
-    <label for="new-name">Name</label>
-    <input id="new-name" type="text" name="name">
-
-    <label for="new-password">Password</label>
-    <input id="new-password" type="password" name="password">
-
-    <input type="submit" value="Sign up">
-  </form>
+  <fieldset>
+    <legend>
+      Sign Up
+    </legend>
+    <form action="/auth/signup" method="POST">
+      <label for="new-email">Email: </label>
+      <input id="new-email" type="email" name="email">
+      </br>
+      <label for="new-name">Name: </label>
+      <input id="new-name" type="text" name="name">
+      </br>
+      <label for="new-password">Password: </label>
+      <input id="new-password" type="password" name="password">
+      </br>
+      <input type="submit" value="Sign Up">
+    </form>
+  </fieldset>
 </main>
