--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,12 +1,17 @@
 <main>
-  <form action="/auth/login" method="POST">
-    <label for="auth-email">Email</label>
+ <fieldset>
+   <legend>
+     Log In
+   </legend>
+   <form action="/auth/login" method="POST">
+    <label for="auth-email">Email: </label>
     <input id="auth-email" type="email" name="email">
-
-    <label for="auth-password">Password</label>
+    </br>
+    <label for="auth-password">Password: </label>
     <input id="auth-password" type="password" name="password">
-
+    </br>
     <input type="submit" value="Log In">
   </form>
+ </fieldset>
 </main>
 
