--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,15 +1,15 @@
 <main>
-    <h2>What's in your recipe?
-        </br>
-        </br>
-        <%= lunch.name %>
-    </h2>
-    <ul class="ejsUl">
-        <% lunch.dataValues.food.forEach(lunch => { %>
-        <li class="ejsLI">
-            <%= lunch.description%>
-        </li>
-        <% }); %>
-    </ul>
+    <article>
+        <h2>
+            What's in your <%= lunch.name %> recipe?
+        </h2>
+        <ul id="ingredientList">
+            <% lunch.dataValues.food.forEach(lunch => { %>
+            <li class="ejsLI">
+                <%= lunch.description%>
+            </li>
+            <% }); %>
+        </ul>
+    </article>
 </main>
 
