--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,9 @@ article {
 }
 
 body {
-  background-image:url('../Images/food_bowl_1.jpg');
+  background-image: 
+    linear-gradient( to bottom,rgba(0,0,0,.2), rgba(0,0,0,.2)),
+    url('../Images/food_bowl_1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
