--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
             <li class="navLi"><a href="/profile">Profile</a></li>
             <li class="navLi"><a href="/auth/logout">Logout</a></li>
             <% } else { %>
-            <li class="navLi"><a href="/">Home Page</li>
+            <li class="navLi"><a href="/">Home Page</a></li>
             <li class="navLi"><a href="/auth/login">Login</a></li>
             <li class="navLi"><a href="/auth/signup">Signup</a></li>
             <% } %>           
