--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Whatcha Makin'?</title>
+    
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
@@ -11,5 +12,6 @@
     <%- include('./partials/header.ejs') %>
     <%- body %>
     <%- include('./partials/footer.ejs') %>
+    <script src='/javascript/header.js'></script>
   </body>
 </html>
