--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,8 @@
 <header>
     <h1 id="bannerTitle">Make a Recipe!</h1>
     <nav>
-        <h2 id="bannerId"><%= currentUser ? currentUser.name : 'Log Or Sign Up' %></h2>
+        <h2 id="bannerId"><%= currentUser ? currentUser.name : 'Log In Or Sign Up' %></h2>
+        
         <ul id="navList">
         <% if (currentUser) { %>
             <li class="navLi"><a href="/">Home Page</a></li>
